// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondaryStructureContext Consumer Should allow components to consume a secondary structure context. 1`] = `
<MockContextClass
  secondaryStructureContext={
    Object {
      "addSecondaryStructure": [Function],
      "clearSecondaryStructure": [Function],
      "removeSecondaryStructure": [Function],
      "selectedSecondaryStructures": Array [],
      "temporarySecondaryStructures": Array [],
      "toggleSecondaryStructure": [Function],
    }
  }
>
  <div>
    I am a class for a mock context!
  </div>
</MockContextClass>
`;

exports[`SecondaryStructureContext Consumer Should allow components to consume a secondary structure context. 2`] = `
<MockContextClass
  secondaryStructureContext={
    Object {
      "addSecondaryStructure": [Function],
      "clearSecondaryStructure": [Function],
      "removeSecondaryStructure": [Function],
      "selectedSecondaryStructures": Array [],
      "temporarySecondaryStructures": Array [],
      "toggleSecondaryStructure": [Function],
    }
  }
>
  <div>
    I am a class for a mock context!
  </div>
</MockContextClass>
`;

exports[`SecondaryStructureContext Provider Should allow components to be provided a secondary structure context 1`] = `
<SecondaryStructureContextProvider>
  <MockContextClass
    secondaryStructureContext={
      Object {
        "addSecondaryStructure": [Function],
        "clearSecondaryStructure": [Function],
        "removeSecondaryStructure": [Function],
        "selectedSecondaryStructures": Array [],
        "temporarySecondaryStructures": Array [],
        "toggleSecondaryStructure": [Function],
      }
    }
  >
    <div>
      I am a class for a mock context!
    </div>
  </MockContextClass>
</SecondaryStructureContextProvider>
`;

exports[`SecondaryStructureContext Provider Should allow components to be provided a secondary structure context. 1`] = `
<SecondaryStructureContextProvider>
  <MockContextClass
    secondaryStructureContext={
      Object {
        "addSecondaryStructure": [Function],
        "clearSecondaryStructure": [Function],
        "removeSecondaryStructure": [Function],
        "selectedSecondaryStructures": Array [],
        "temporarySecondaryStructures": Array [],
        "toggleSecondaryStructure": [Function],
      }
    }
  >
    <div>
      I am a class for a mock context!
    </div>
  </MockContextClass>
</SecondaryStructureContextProvider>
`;
